--- a/src/app/views/employees/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-details/employee-details.component.html
@@ -1,6 +1,7 @@
 <aw-view-base>
   <aw-card>
     <h3>Detalles empleado- {{ employee?.firstName }} {{ employee?.lastName }}</h3>
+    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
     <hr />
 
     <table class="table table-striped">
