Creado componente vacio para editar empleado

--- a/src/app/views/employees/employee-view/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-details.component.html
@@ -99,4 +99,5 @@
   <button [routerLink]="siteUrls.employees.employeeList" class="btn btn-primary">
     <span class="fa-solid fa-chevron-left"></span> Volver
   </button>
+  <button [routerLink]="urlEdit" class="btn btn-success ms-2"><span class="fa-solid fa-pencil"></span> Editar</button>
 </aw-card>
