Renombrados BadResponse a BadRequest

--- a/src/app/views/employees/employee-edit/employee-edit.component.html
+++ b/src/app/views/employees/employee-edit/employee-edit.component.html
@@ -1,3 +1,12 @@
 <aw-view-base>
-  <p>employee-edit works!</p>
+  <aw-card>
+    <h3>Editar empleado</h3>
+    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
+  </aw-card>
+
+  <div class="mt-2"></div>
+
+  <aw-card>
+    <h5>Formulario aquí</h5>
+  </aw-card>
 </aw-view-base>
