--- a/src/app/views/employees/employee-view/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-details.component.html
@@ -23,6 +23,10 @@
           <td>{{ employee()?.email }}</td>
         </tr>
         <tr>
+          <td>Teléfono</td>
+          <td>{{ employee()?.phoneNumber }}</td>
+        </tr>
+        <tr>
           <td>Cuenta activa</td>
           <td>
             <span class="d-flex">
