Base update employee

--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -5,9 +5,7 @@
     </div>
 
     <ng-container *ngIf="text">
-      <span class="ml-2">
-        {{ text }}
-      </span>
+      <span class="ml-2">&nbsp;{{ text }}</span>
     </ng-container>
 
     <ng-content></ng-content>
