--- a/src/app/components/views/view-base/view-base.component.html
+++ b/src/app/components/views/view-base/view-base.component.html
@@ -19,7 +19,7 @@
     <!-- end navbar -->
 
     <!-- page content -->
-    <div [ngClass]="cssContent" class="pt-4">
+    <div [ngClass]="cssContent" class="pt-4 fade-in-fast">
       <ng-content></ng-content>
     </div>
     <!-- end page content -->
