Mejorado visualmente sidebar

--- a/src/app/views/employees/employee-view/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-details.component.html
@@ -1,5 +1,5 @@
 <aw-card>
-  <table class="table table-striped">
+  <table class="table table-striped table-borderless">
     <!-- sonarLint -->
     <caption></caption>
     <thead>
