--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -46,7 +46,8 @@
           <a class="nav-link disabled">Disabled</a>
         </li>
       </ul>
-      <div class="d-flex">
+      <div>
+        <span (click)="handleChangeTheme()" class="fa-solid fa-circle-half-stroke me-2 cursor-pointer"></span>
         <ng-container *ngIf="authState$()">{{ userName }}</ng-container>
       </div>
     </div>
