--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -2,10 +2,9 @@
 @import "variables-local";
 @import "variables-bs";
 
-$bg-sidebar-wrapper: $dark;
-$border-color: #2b2b2b;
-$header-menu-color: #6c7b88;
-$hover-color: #ffffff;
+$bg-color: var(--#{$prefix}tertiary-bg);
+$text-color: var(--#{$prefix}emphasis-color);
+$border-color: var(--#{$prefix}border-color);
 
 .sidebar {
   margin-top: $navbar-margin-top;
@@ -17,7 +16,7 @@ $hover-color: #ffffff;
   left: 0;
   z-index: 999;
   transition: left 0.3s ease;
-  background-color: $bg-sidebar-wrapper;
+  background-color: $bg-color;
 
   .sidebar-profile,
   .sidebar-menu {
@@ -34,18 +33,13 @@ $hover-color: #ffffff;
   ul li:hover a i,
   .sidebar-dropdown .sidebar-submenu li a:hover:before,
   .sidebar-menu .sidebar-dropdown.active a i {
-    color: $hover-color;
+    color: $text-color;
   }
 
   .sidebar-menu ul li a i,
   .sidebar-menu .sidebar-dropdown div {
     background-color: $border-color;
     border: none;
-    margin-left: 1px;
-  }
-
-  .sidebar-menu .header-menu span {
-    color: $header-menu-color;
   }
 
   a {
@@ -111,7 +105,7 @@ $hover-color: #ffffff;
       }
 
       .company-name {
-        color: $primary;
+        font-weight: bold;
       }
     }
 
@@ -136,7 +130,7 @@ $hover-color: #ffffff;
           text-decoration: none;
           position: relative;
           padding: 8px 0;
-          margin-left: 0.5rem;
+          padding-left: 0.5rem;
 
           i {
             margin-right: 10px;
