--- a/src/app/views/tests/home-test/home-test.component.html
+++ b/src/app/views/tests/home-test/home-test.component.html
@@ -3,4 +3,8 @@
   <div>
     <button (click)="handleAlertsConsole()" class="btn btn-primary">Mostrar alertas en consola</button>
   </div>
+
+  <div class="mt-4">
+    <aw-timezone-selector></aw-timezone-selector>
+  </div>
 </aw-view-base>
