--- a/src/scss/_variables-bs-dark.scss
+++ b/src/scss/_variables-bs-dark.scss
@@ -1,10 +1,10 @@
 // Dark color mode variables
 //
 // Custom variables for the `[data-bs-theme="dark"]` theme. Use this as a starting point for your own custom color modes by creating a new theme-specific file like `_variables-dark.scss` and adding the variables you need.
-
 //
 // Global colors
 //
+@import "bootstrap/scss/functions";
 
 // scss-docs-start sass-dark-mode-vars
 // scss-docs-start theme-text-dark-variables
