--- a/src/app/views/company-tasks/company-tasks-list/company-tasks-list.component.html
+++ b/src/app/views/company-tasks/company-tasks-list/company-tasks-list.component.html
@@ -33,7 +33,8 @@
       <tbody awTbody *ngIf="apiResult">
         <tr *ngFor="let task of apiResult.items" (click)="handleSelectItem(task)" class="cursor-pointer">
           <td>{{ task.name }}</td>
-          <td>{{ task.created | date }}</td>
+          <td>{{ task.created | datetime }}</td>
+          <td [innerHTML]="task.active | boolToIcon"></td>
         </tr>
       </tbody>
     </aw-table>
