Simplificados nombres de SiteUrls

--- a/src/app/views/employees/employee-invite/employee-invite.component.html
+++ b/src/app/views/employees/employee-invite/employee-invite.component.html
@@ -53,7 +53,7 @@
         btnText="Invitar"
         btnIcon="fas fa-user-plus"></aw-btn-loading>
 
-      <button [routerLink]="siteUrls.employees.employeeList" class="btn btn-primary mt-2 ms-2" type="button">
+      <button [routerLink]="siteUrls.employees.list" class="btn btn-primary mt-2 ms-2" type="button">
         <span class="fa-solid fa-chevron-left"></span> Volver
       </button>
       <!-- end buttons-->
