--- a/src/app/views/employees/employee-list/employee-list.component.html
+++ b/src/app/views/employees/employee-list/employee-list.component.html
@@ -6,7 +6,7 @@
     <!-- toolbar -->
     <div class="d-flex mb-2">
       <span class="me-auto">
-        <a [routerLink]="siteUrls.employees.employeeInvite" class="btn btn-sm btn-outline-success">
+        <a [routerLink]="siteUrls.employees.invite" class="btn btn-sm btn-outline-success">
           <span class="fas fa-user-plus"></span> Invitar empleado
         </a>
       </span>
