--- a/src/app/views/employees/employee-view/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-details.component.html
@@ -129,7 +129,7 @@
     <!-- end loading spinner -->
   </table>
 
-  <button [routerLink]="siteUrls.employees.employeeList" class="btn btn-primary">
+  <button [routerLink]="siteUrls.employees.list" class="btn btn-primary">
     <span class="fa-solid fa-chevron-left"></span> Volver
   </button>
 
