--- a/src/app/views/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/views/company-tasks/company-task-list/company-task-list.component.html
@@ -6,7 +6,7 @@
     <!-- toolbar -->
     <div class="d-flex mb-2">
       <span class="me-auto">
-        <a [routerLink]="siteUrls.employees.employeeInvite" class="btn btn-sm btn-outline-success">
+        <a [routerLink]="siteUrls.companyTasks.create" class="btn btn-sm btn-outline-success">
           <span class="fas fa-user-plus"></span> Crear tarea
         </a>
       </span>
