--- a/src/app/views/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/views/company-tasks/company-task-list/company-task-list.component.html
@@ -7,7 +7,7 @@
     <div class="d-flex mb-2">
       <span class="me-auto">
         <a [routerLink]="siteUrls.companyTasks.create" class="btn btn-sm btn-outline-success">
-          <span class="fas fa-user-plus"></span> Crear tarea
+          <span class="fa-solid fa-list-check"></span> Crear tarea
         </a>
       </span>
 
