Implementado detalles de tareas, activar y desactivar tarea

--- a/src/app/views/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/views/company-tasks/company-task-list/company-task-list.component.html
@@ -33,7 +33,7 @@
       <tbody awTbody *ngIf="apiResult">
         <tr *ngFor="let task of apiResult.items" (click)="handleSelectItem(task)" class="cursor-pointer">
           <td>{{ task.name }}</td>
-          <td>{{ task.created | datetime }}</td>
+          <td>{{ task.created | datetime: dateShort }}</td>
           <td [innerHTML]="task.active | boolToIcon"></td>
         </tr>
       </tbody>
