--- a/src/app/views/employees/employee-view/employee-view.component.html
+++ b/src/app/views/employees/employee-view/employee-view.component.html
@@ -1,6 +1,6 @@
 <aw-view-base>
   <aw-card>
-    <h3>Detalles empleado - {{ employee()?.firstName }} {{ employee()?.lastName }}</h3>
+    <h3>Empleado - {{ employee()?.firstName }} {{ employee()?.lastName }}</h3>
     <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
   </aw-card>
 
