--- a/src/app/views/company-tasks/company-task-view/company-task-view.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-view.component.html
@@ -1,10 +1,12 @@
 <aw-view-base>
   <aw-card>
-    <h3>Detalles de la tarea</h3>
+    <h3>Detalles de la tarea - {{ companyTask()?.name }}</h3>
     <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
   </aw-card>
 
   <div class="mt-2"></div>
+
+  <aw-company-task-details [companyTaskId]="companyTaskId"></aw-company-task-details>
 
   <div class="mt-3">
     <aw-card>
