--- a/src/app/views/employees/employee-view/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-details.component.html
@@ -66,7 +66,7 @@
         </tr>
         <tr>
           <td>Fecha de ingreso</td>
-          <td>{{ employee()?.entryDate | datetime: datetime.DATE_SHORT }}</td>
+          <td>{{ employee()?.entryDate | datetime: dateShort }}</td>
         </tr>
         <tr>
           <td>Roles</td>
