--- a/src/app/views/employees/employee-edit/employee-edit.component.html
+++ b/src/app/views/employees/employee-edit/employee-edit.component.html
@@ -1,4 +1,4 @@
-<aw-view-base>
+<aw-view-base cssContent="container">
   <aw-card>
     <h3>Editar datos de empleado</h3>
     <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
