--- a/src/app/components/forms/inputs/form-checkbox/form-checkbox.component.html
+++ b/src/app/components/forms/inputs/form-checkbox/form-checkbox.component.html
@@ -1,4 +1,4 @@
-<div class="custom-control custom-checkbox">
+<div class="form-check">
   <input
     (ngModelChange)="onChangeValue($event)"
     [(ngModel)]="value"
@@ -6,14 +6,11 @@
     [id]="id"
     [ngClass]="{ extraCss: true, 'is-invalid': isInvalid() }"
     [value]="value"
-    class="custom-control-input"
-    type="checkbox"/>
+    class="form-check-input"
+    type="checkbox" />
 
   <ng-container *ngIf="label">
-    <label
-      [for]="id"
-      [ngClass]="{ 'text-danger': isInvalid(), 'text-primary': !isInvalid() }"
-      class="custom-control-label">
+    <label [for]="id" [ngClass]="{ 'text-danger': isInvalid(), 'text-primary': !isInvalid() }" class="form-check-label">
       {{ label }}
     </label>
   </ng-container>
