--- a/src/app/components/forms/inputs/form-textarea/form-textarea.component.html
+++ b/src/app/components/forms/inputs/form-textarea/form-textarea.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   <ng-container *ngIf="label">
-    <label [for]="id" class="text-primary">
+    <label [for]="id" class="form-label">
       {{ label }}
     </label>
   </ng-container>
