--- a/src/app/views/company-tasks/company-task-edit/company-task-edit.component.html
+++ b/src/app/views/company-tasks/company-task-edit/company-task-edit.component.html
@@ -12,6 +12,15 @@
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
         <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
 
+        <ng-container *ngIf="form.get('name')?.value">
+          <div class="my-3">
+            <aw-badge
+              [background]="form.get('background')?.value"
+              [color]="form.get('color')?.value"
+              [name]="form.get('name')?.value"></aw-badge>
+          </div>
+        </ng-container>
+
         <!-- name -->
         <div class="mb-2">
           <aw-form-input
@@ -35,6 +44,34 @@
             label="Activo"></aw-form-checkbox>
         </div>
         <!-- end active -->
+
+        <div class="d-flex">
+          <!-- background -->
+          <div class="mb-2">
+            <aw-form-color
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="background"
+              formControlName="background"
+              label="Color de fondo">
+            </aw-form-color>
+          </div>
+          <!-- end background -->
+
+          <!-- color -->
+          <div class="mb-2 ms-5">
+            <aw-form-color
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="color"
+              formControlName="color"
+              label="Color de texto">
+            </aw-form-color>
+          </div>
+          <!-- end color -->
+        </div>
 
         <button [routerLink]="urlCompanyTaskDetails" class="btn btn-primary mt-2" type="button">
           <span class="fa-solid fa-chevron-left"></span> Volver
