Creada func getRandomColorHexadecimal

--- a/src/app/views/company-tasks/company-task-view/company-task-details/company-task-details.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-details/company-task-details.component.html
@@ -13,7 +13,10 @@
         <tr>
           <td>Nombre</td>
           <td>
-            {{ companyTask()?.name }}
+            <aw-badge
+              [background]="companyTask()?.background"
+              [color]="companyTask()?.color"
+              [name]="companyTask()?.name"></aw-badge>
           </td>
         </tr>
         <tr>
