--- a/src/app/views/company-tasks/company-task-view/company-task-view.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-view.component.html
@@ -1,6 +1,6 @@
 <aw-view-base>
   <aw-card>
-    <h3>Detalles de la tarea - {{ companyTask()?.name }}</h3>
+    <h3>Tarea - {{ companyTask()?.name }}</h3>
     <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
   </aw-card>
 
@@ -8,9 +8,21 @@
 
   <aw-company-task-details [companyTaskId]="companyTaskId"></aw-company-task-details>
 
-  <div class="mt-3">
-    <aw-card>
-      <h3>Varias vistas</h3>
-    </aw-card>
-  </div>
+  <ng-container *ngIf="companyTaskId && companyTask()">
+    <div class="mt-3">
+      <aw-card>
+        <div>
+          <tabset>
+            <tab heading="Usuarios" #tabUsers="tab">
+              <aw-company-task-users *ngIf="tabUsers.active"></aw-company-task-users>
+            </tab>
+            <tab heading="Basic Title 1" #tabB="tab">
+              <aw-company-task-users *ngIf="tabB.active"></aw-company-task-users>
+            </tab>
+            <tab heading="Basic Title 2" #tabC="tab">Basic content 2</tab>
+          </tabset>
+        </div>
+      </aw-card>
+    </div>
+  </ng-container>
 </aw-view-base>
