Implementada lista de tareas en los detalles del empleado

--- a/src/app/views/company-tasks/company-task-view/company-task-view.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-view.component.html
@@ -13,7 +13,7 @@
       <aw-card>
         <div>
           <tabset>
-            <tab heading="Usuarios" #tabUsers="tab">
+            <tab heading="Empleados" #tabUsers="tab">
               <aw-company-task-users *ngIf="tabUsers.active"></aw-company-task-users>
             </tab>
             <tab heading="Basic Title 1" #tabB="tab">
