--- a/src/app/views/employees/employee-view/employee-view.component.html
+++ b/src/app/views/employees/employee-view/employee-view.component.html
@@ -6,11 +6,27 @@
 
   <div class="mt-2"></div>
 
-  <aw-employee-details [employeeId]="employeeId"></aw-employee-details>
+  <!-- employee details -->
+  <ng-container *ngIf="employee()">
+    <aw-employee-details></aw-employee-details>
+  </ng-container>
+  <!-- end employee details -->
 
-  <div class="mt-3">
-    <aw-card>
-      <h3>Varias vistas</h3>
-    </aw-card>
-  </div>
+  <!-- tabs -->
+  <ng-container *ngIf="employee()">
+    <div class="mt-3">
+      <aw-card>
+        <div>
+          <tabset>
+            <tab heading="Tareas" #tabTasks="tab">
+              <aw-employee-tasks></aw-employee-tasks>
+            </tab>
+            <tab heading="Basic Title 1" #tabB="tab"> </tab>
+            <tab heading="Basic Title 2" #tabC="tab">Basic content 2</tab>
+          </tabset>
+        </div>
+      </aw-card>
+    </div>
+  </ng-container>
 </aw-view-base>
+<!-- end tabs -->
